# test-h1st-cookiecutter-etl-app

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.lighthouse/jenkins-x/: release.yaml
.lighthouse/jenkins-x/javascript/: pullrequest.yaml  release.yaml
.lighthouse/jenkins-x/python/: pullrequest.yaml  release.yaml
charts/test-h1st-cookiecutter-etl-app-api/: Chart.yaml  Makefile  README.md  values.yaml
charts/test-h1st-cookiecutter-etl-app-etl/: Chart.yaml  Makefile  README.md  values.yaml
charts/test-h1st-cookiecutter-etl-app-ui/: Chart.yaml  Makefile  README.md  values.yaml
test-h1st-cookiecutter-etl-app-etl/: pyproject.toml
test-h1st-cookiecutter-etl-app-ui/: package-lock.json  package.json
test-h1st-cookiecutter-etl-app-ui/public/: index.html  manifest.json
test-h1st-cookiecutter-etl-app-ui/src/: App.js
test_h1st_cookiecutter_etl_app_api/: manage.py  pyproject.toml
test_h1st_cookiecutter_etl_app_api/config/: urls.py  wsgi.py
test_h1st_cookiecutter_etl_app_api/config/settings/: base.py
