[tool.poetry]
name = "test_h1st_cookiecutter_etl_app-etl"
version = "0.0.1"
description = "{ cookiecutter.project_short_description }} - ETL"
authors = [" <>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
